kubernetes/apps/netbird/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbird
spec:
  hostnames:
    - netbird.maxice8.com
  parentRefs:
    - name: public
      namespace: gateway-system
      sectionName: https
  rules:
    - matches:
        - headers:
            - name: Content-Type
              type: RegularExpression
              value: application/grpc.*
      backendRefs:
        - name: netbird-server-h2c
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /relay
        - path:
            type: PathPrefix
            value: /ws-proxy/
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /oauth2
      backendRefs:
        - name: netbird-server
          port: 80
    - backendRefs:
        - name: netbird-dashboard
          namespace: netbird-dashboard
          port: 80
