kubernetes/apps/netbird/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netbird-server-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: netbird-server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - port: http
          protocol: TCP
    - ports:
        - port: stun
          protocol: UDP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netbird-dashboard-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: netbird-dashboard
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - port: http
          protocol: TCP
